force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Projet</label>
    <pluralLabel>Projets</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Nom du projet</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Objet représentant un projet réalisé pour un compte spécifique.</description>
</CustomObject>