force-app/main/default/objects/Project__c/fields/ActualEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActualEndDate__c</fullName>
    <label>Date de fin réelle</label>
    <type>Date</type>
</CustomField>