force-app/main/default/objects/Project__c/fields/ActualStartDate__c.field-meta.xml
<CustomField>
    <fullName>ActualStartDate__c</fullName>
    <label>Date de création réelle</label>
    <type>Date</type>
</CustomField>