force-app/main/default/objects/Project__c/fields/EstimatedEndDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEndDate__c</fullName>
    <label>Date de fin estimée</label>
    <type>Date</type>
    <required>true</required>
</CustomField>