force-app/main/default/objects/Project__c/fields/EstimatedStartDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedStartDate__c</fullName>
    <label>Date de création estimée</label>
    <type>Date</type>
    <required>true</required>
</CustomField>